# helen

./: .gitattributes  .gitignore  launch-claude.ps1  package.json  run-claude.ps1
.autonomous-agent/: state.db
autonomous/: AUDIT_REPORT.json  failed.txt
autonomous/checkpoints/: checkpoint-20260506-220333.json
autonomous/dialogue/: conversation.jsonl  state.json
autonomous/kb/: INDEX.md  MEMORY.md  facts.jsonl
autonomous/metrics/: metrics.jsonl
autonomous/replays/: cycle-000001.json  cycle-000002.json
autonomous/state/: budget.json  config.json  dashboard_token.txt  heartbeat.json
src/: index.js
tests/: test_cli_args.py  test_config.py  test_dashboard_auth.py  test_failure_analyzer.py  test_queue.py  test_safe_mode.py  test_security.py  test_state.py
wifi/: .gitignore  API_REFERENCE.md  BUILD-APPLE-ARTIFACTS.md  CLAUDE.md  COVERAGE.md  CommClient-Architecture-Blueprint.md  CommClient-LAN-WiFi-Test-Plan.docx  CommClient-UX-Redesign.jsx  DELIVERY-MANIFEST.md  DEPLOY-GUIDE.md  DEPLOYMENT.md  LINUX.md  PACKAGING-ARCHITECTURE.md  PACKAGING.md  PROJECT-STRUCTURE.md  PROMPT_FIX_ALL.md  PROMPT_RUN_NOW.txt  RUNBOOKS.md  SECURITY-ARCHITECTURE.md  SECURITY.md  TEST-SCENARIOS.md  THREAT-MODEL.md  USER-GUIDE-AR.md  WORK_LOG.md  bootstrap.bat  build-all.bat  build.bat  build.ps1  release.ps1  run-dev.bat  start-commclient.bat  start-commclient.ps1
wifi/.github/workflows/: android-builds.yml  apple-builds.yml  build.yml  ci.yml  test.yml
wifi/CommClient-Desktop/: .env.example  README.md  UX_REDESIGN.html  WINDOWS_DEPLOYMENT.md  build-all.bat  build-all.ps1  build-linux-on-linux.sh  build-mac-on-mac.sh  electron-builder.yml  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
wifi/CommClient-Desktop/e2e/: README.md  playwright.config.ts
wifi/CommClient-Desktop/scripts/: build-release.ts  build.bat  chaos-bridge-partition.mjs  e2e-5k-chat-diag.mjs  e2e-call-plus-chat.mjs  e2e-capacity.mjs  e2e-connected-clients.mjs  e2e-group-call.mjs  e2e-ios-bridge.mjs  e2e-ios-simulator.mjs  e2e-megascale-seeded.mjs  e2e-megascale.mjs  e2e-multirouter-call.mjs  e2e-remote-admin.mjs  e2e-smoke.mjs  e2e-three-servers.mjs  e2e-tunnel-v2.mjs  e2e-tunnel.mjs  grant-privileges.bat  grant-privileges.ps1  load-distributed.k6.js  sim-ios-vs-desktop.mjs  sim-send-repro.mjs  soak-mesh.mjs  (+9 more)
wifi/CommClient-Mobile/: README.md  build-ios-on-mac.sh  capacitor.config.ts  package-lock.json  package.json
wifi/CommClient-Server/: .ALEMBIC_FILES.txt  .env  .env.example  ADAPTERS_QUICK_REFERENCE.txt  ADMIN_API_INTEGRATION.md  ADMIN_API_QUICKSTART.md  ADMIN_API_SUMMARY.txt  ALEMBIC_SETUP_SUMMARY.txt  BUILD-OPTIMIZATION.md  CommClient-Server.optimized.spec  CommClient-Server.spec  Dockerfile  Dockerfile.chaos  IMPLEMENTATION_STATUS.md  INTEGRATION_GUIDE_E2EE_WHITEBOARD.md  LICENSE.txt  MIGRATIONS.md  NOTIFICATIONS_INTEGRATION.md  NOTIFICATION_FILES_INDEX.md  NOTIFICATION_QUICKSTART.md  NOTIFICATION_SYSTEM_README.md  QUICK_REFERENCE.txt  README.md  SCRIPTS_SUMMARY.txt  TEST_INDEX.md  TEST_PLAN.docx  TRANSPORTS_IMPLEMENTATION.md  TRANSPORTS_QUICKSTART.md  TRANSPORTS_README.md  TRANSPORT_ADAPTERS_FILES_CREATED.txt  TRANSPORT_ADAPTERS_GUIDE.md  TRANSPORT_ADAPTERS_IMPLEMENTATION_SUMMARY.txt  TURN_AND_VOICE_README.md  TURN_VOICEMSG_INTEGRATION.md  TURN_VOICEMSG_QUICKSTART.md  TURN_VOICEMSG_SUMMARY.txt  WINDOWS_DEPLOYMENT_CHECKLIST.md  _wsl_start.sh  alembic.ini  auto_setup.py  (+19 more)
wifi/CommClient-Web/: build-pwa.mjs  package.json
wifi/Helen-Agent-Windows/: Cargo.toml  README.md  agent.manifest  build.rs
wifi/Helen-Agent-Windows/src/: auth.rs  commands.rs  config.rs  error.rs  files.rs  fingerprint.rs  heartbeat.rs  logging.rs  main.rs  registration.rs  screen.rs  service.rs  sysinfo.rs  updater.rs  ws_channel.rs
wifi/Helen-CLI/: Cargo.toml  README.md  build.rs
wifi/Helen-CLI/.cargo/: config.toml
wifi/Helen-CLI/src/: api.rs  auth.rs  config.rs  error.rs  logging.rs  main.rs  socket.rs  util.rs
wifi/Helen-CLI/src/audio/: capture.rs  mod.rs  opus_codec.rs  playback.rs
wifi/Helen-CLI/src/commands/: agent.rs  call.rs  channels.rs  files.rs  login.rs  messages.rs  mod.rs  pair.rs
wifi/Helen-Mobile-Flutter/: .env.example  .gitignore  CHANGELOG.md  README.md  RELEASE.md  analysis_options.yaml  pubspec.yaml
wifi/Helen-Rendezvous/: .token  CLUSTER.md  Helen-Rendezvous.spec  LICENSE.txt  admin_routes.py  docker-compose.cluster.yml  installer.nsi  main.py  requirements.txt  run.py
wifi/Helen-Router/: .env.example  Helen-Router.spec  LICENSE.txt  installer.nsi  requirements.txt  run.py  stress_test_100.py  stress_test_1000.py  stress_test_10000.py  stress_test_100k_mesh.py  stress_test_1m.py  test_cross_platform_federation.py  test_external_capacity.py  test_failover.py  test_failover_strict.py  test_mesh_endpoints.py
wifi/Helen-Shell/: README.md  apps.json  build-panels.js  electron-builder.yml  main.js  package-lock.json  package.json  preload.js
wifi/Linux-Admin/: README.md  install.sh  uninstall.sh
wifi/Linux-Client/: README.md  install.sh  uninstall.sh
wifi/Linux-Server/: Dockerfile  README.md  install.sh  uninstall.sh
wifi/Vault/: README.md
wifi/docs/: ARCHITECTURE.md
wifi/iOS/: README.md
wifi/iOS-Admin/: README.md
wifi/scripts/: build-all.sh  build-release.bat  build.bat  dev.bat  diagnose-connection.ps1  release.bat  setup.bat  smoke-all-backends.sh  start.bat
wifi/sdk/python/: pyproject.toml
wifi/sdk/python/helen_client/: __init__.py  client.py  types.py
(+3631 files in other folders)
